# nmrs

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/advanced/: connection-options.md  dbus.md
docs/src/api/: builders.md  models.md  network-manager.md  raw.md  types.md
docs/src/appendix/: changelog.md  faq.md  license.md  troubleshooting.md
docs/src/development/: architecture.md  contributing.md  releases.md  testing.md
docs/src/getting-started/: installation.md  quick-start.md
docs/src/guide/: monitoring.md  wifi.md
nmrs/: CHANGELOG.md  Cargo.toml
nmrs/src/: lib.rs
nmrs/src/api/: network_manager.rs  wifi_scope.rs
nmrs/src/api/builders/: mod.rs
nmrs/src/api/models/: active_connection.rs  connectivity.rs  error.rs  mod.rs  network_event.rs  snapshot.rs
nmrs/src/core/: active_connection.rs  bluetooth.rs  custom_connection.rs  device.rs  mod.rs  vpn.rs
nmrs/src/dbus/: settings.rs  settings_connection.rs
nmrs/src/monitoring/: events.rs  mod.rs  settings.rs
nmrs/src/util/: utils.rs
scripts/: bump_version.py
scripts/ci/: run-networkmanager-tests.sh
