[workspace]
members = [
  "mmrs",
  "nmrs"
]

resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/cachebag/nmrs"

[workspace.lints.rust]
unused = { level = "warn", priority = -1 }

[workspace.lints.clippy]
# Allow some common patterns
too_many_arguments = "allow"
type_complexity = "allow"

[workspace.dependencies]
# Core dependencies
zbus = "5.15.0"
zvariant = "5.11.0"
log = "0.4.30"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
uuid = { version = "1.23.1", features = ["v4", "v5"] }
futures = "0.3.32"
futures-timer = "3.0.4"
base64 = "0.22.1"
nmrs = { path = "nmrs", version = "3.0" }
async-trait = "0.1.89"
bitflags = "2.11.1"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "sync", "time", "process"] }
